feat: support extension instrumentation